<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bunny_house"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bunnyImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/bunny_image_description"
        android:src="@drawable/bunny"/>

    <Button
        android:id="@+id/feedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bunnyImage"
        android:layout_marginTop="16dp"
        android:text="@string/button_feed"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/cleanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feedButton"
        android:layout_marginTop="16dp"
        android:text="@string/button_clean"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cleanButton"
        android:layout_marginTop="16dp"
        android:text="@string/button_play"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/sleepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playButton"
        android:layout_marginTop="16dp"
        android:text="@string/button_sleep"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>